--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Web-Workers + React ⚡️ ⚛️</title>
   </head>
   <body>
-    <div id="app"></div>
+    <main id="app"></main>
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
